# compare_variance_residual

./: .gitattributes  .gitignore  LICENSE  Readme.md  SemanticModel.py  batch_run.py  brain_predictions.py  brain_predictions_residuals.py  compute_residuals_from_brain_predictions.py  download_data.py  extract_context_representations.py  hdf_utils.py  import_nord_matplotlib.ipynb  miniconsTest.ipynb  predict_brain_activity.py  pyproject.toml  requirements.txt  residuals_text_speech.py  setup.py  variance_partitioning.py
.run/: 0 Setup.run.xml  1 extract context representations.run.xml  2 predict brain activity based on context representations.run.xml  3 compute residuals from brain predictions.run.xml  brain_predictions.run.xml  brain_predictions_residuals.run.xml  compute residuals from brain predictions.run.xml  extract context representations.run.xml  extract_context_representations.run.xml  joint model predictions.run.xml  low level model prediction.run.xml  predict brain activity on context representations.run.xml  variance partitioning.run.xml  variance_partitioning.run.xml  visualize.run.xml
compare_variance_residual/: ab_testing.ipynb  brain_maps_validation_curves.ipynb  curves.ipynb  data_management.py  dataset_generation.ipynb  dataset_generation_orthogonal.ipynb  dataset_generation_random.ipynb  extract_context_representations.ipynb  extract_context_representations.py  extract_downsampled_stimulus_embeddings.ipynb  extract_downsampled_stimulus_embeddings.py  joint_prediction.py  low_level_prediction.py  plot_brain_maps.ipynb  plot_dimensions.ipynb  plot_noise_levels.ipynb  plot_scalars_simplex.ipynb  plot_simplex.ipynb  plot_training_samples.ipynb  plotting.py  quickstart.ipynb  residual.py  residual_method.ipynb  residual_prediction.py  sanity_checks.ipynb  semantic_prediction.py  simulation.py  test_multiple_scalars.ipynb  validation_curves.ipynb  variable_testing.ipynb  variance_partitioning.ipynb  variance_partitioning.py  variance_visualization.ipynb
(+640 files in other folders)
