[project]
name = "compare_variance_residual"
dynamic = ["version"]
authors = [
    { name = "Leo Schultheiss", email = "leo.schultheiss@tum.de" },
]
description = "Code for the bachelor thesis of Leo Schultheiss"
readme = "Readme.md"
requires-python = "=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
license = { file = "LICENSE" }
keywords = ["statistics", "variance partitioning"]

dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "numpy>=2.1.2",
    "scipy>=1.14.1",
    "himalaya>=0.4.6",
    "scikit-learn>=1.5.2",
    "matplotlib>=3.9.2",
    "simplstyles",
    "seaborn",
    "pyvenny",
    "array-api-compat",
    "voxelwise-tutorials",
    "torch",
    "torchvision",
    "transformers",
]

[project.optional-dependencies]
gpu-support = ["cupy>=13.3.0"]

[project.urls]
Homepage = "https://github.com/leo-schultheiss/compare_variance_residual/tree/master"
Issues = "https://github.com/leo-schultheiss/compare_variance_residual/issues"

[tool.setuptools]
packages = ["compare_variance_residual"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.versioning]
scheme = "simple"